<resources>
    <string name="app_name">ABMinder</string>
    <string name="search_terms_here">Search terms here…</string>
    <string name="definitions">Definition</string>
    <string name="examples">Example</string>
    <string name="navigation_drawer_open">Open Menu</string>
    <string name="navigation_drawer_close">Close Menu</string>
    <string name="calculator">Calculator</string>
    <string name="an_innovative_business_mathematics_application">Navigate numbers with ease.</string>
    <string name="mathtrix">MathTrix</string>
    <string name="settings">Settings</string>
    <string name="principal_amount">Principal Amount</string>
    <string name="rate_of_interest">Rate of Interest (%)</string>
    <string name="time_years">Time (years)</string>
    <string name="calculate">Calculate</string>
    <string name="simple_interest_result">Result</string>
    <string name="search">Search</string>
    <string name="business_calculator">Business Calculator</string>
    <string name="simple_interest">Simple Interest</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="title_calculationoptions">calculator</string>
    <string name="progress">Progress</string>
    <string name="switch_theme">Switch Theme</string>

    <string name="pref_language_title">Language</string>
    <string name="pref_language_key">language</string>
    <string name="dictionary">Dictionary</string>
    <string name="npv_result">Result</string>
    <string name="invalid_investment_amount">Invalid investment amount</string>
    <string name="roi">%1$s%</string>
    <string name="invalid_variable_cost">Invalid variable cost</string>
    <string-array name="languages">
        <item>Filipino</item>
        <item>English</item>
    </string-array>
    <string-array name="language_values">
        <item>fil</item>
        <item>en</item>
    </string-array>
    <string-array name="theme_options">
        <item>System default</item>
        <item>Light Theme</item>
        <item>Dark Theme</item>
    </string-array>
    <string-array name="theme_values">
        <item>system</item>
        <item>light</item>
        <item>dark</item>
    </string-array>
    <string name="tvm_result_format">%.2f</string>
    <string name="learn">Learn</string>
    <string name="break_even">Break-even:</string>
    <string name="calculating_simple_interest">Calculating simple interest:</string>
    <string name="example">Example:</string>
    <string name="assets_path">file:///android_asset/%s</string>
    <string name="description">Welcome to ABMinder, the ultimate mobile application designed specifically for ABM (Accountancy, Business, and Management) students. Developed by a team of dedicated scholars from Mother Theresa Colegio De Balatan, ABMinder aims to revolutionize the way students engage with core subjects such as Business Mathematics, Business Finance, FABM 1, and Applied Economics.</string>
    <string name="get_started">Get started</string>
    <string name="welcome_to_mathtrix">MathTrix</string>
    <string name="choose_difficulty_level">Choose difficulty level</string>
    <string name="easy">EASY</string>
    <string name="medium">MEDIUM</string>
    <string name="hard">HARD</string>
    <string name="quiz">Quiz</string>
    <string name="quizDescription">Choose your preferred difficulty level:\n\n   - Easy: Suitable for beginners or those looking for a foundational understanding.\n   - Medium: A moderate challenge for individuals with a basic understanding of business mathematics.\n   - Hard: Designed for advanced users seeking to test their expertise in complex business math scenarios.</string>
    <string name="instructions">Instructions:</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="next">Next</string>
    <string name="principal">Principal amount</string>
    <string name="rate">Rate of interest</string>
    <string name="time_in_years">Time (in years)</string>
    <string name="simple_interestz">Simple Interest:\n %1$s</string>
    <string name="finish">Finish</string>
    <string name="quiz_completed">Result</string>
    <string name="press_again">Press back again to exit</string>
    <string name="arrow">arrow</string>
    <string name="payback_period_result">Payback Period: %.2f</string>

    <!-- Quiz Result Messages -->
    <string name="quiz_result_perfect_score">Congratulations! You got a perfect score! 🎉</string>
    <string name="quiz_result_pass">Congratulations! You passed the quiz! 🎊</string>
    <string name="quiz_result_fail">Sorry, you didn\'t pass the quiz. Try again!</string>
    <string name="_10">%1$s/10</string>
    <string name="question">Question</string>
    <string name="profitmar">Profit Margin: %.2f</string>
    <string name="rOI">%1$s%</string>
    <string name="exa">Example: %1$s</string>
    <string name="recent_searches">Recent searches…</string>
    <string name="score">score</string>
    <string name="search_topics_here">Search topics here...</string>
    <string name="books">Books</string>
    <string name="time_taken">Time Taken</string>
    <string name="replay">Replay</string>
    <string name="test_your_knowledge">Test Your Knowledge</string>
    <string name="engage_your_mind_with_our_interactive_quiz_app">Engage your mind!</string>
    <string name="choose_your_preferred_difficulty_level_easy_medium_or_hard_and_dive_into_a_collection_of_thought_provoking_questions">Choose your preferred difficulty level – easy, medium, or hard – and dive into a collection of thought-provoking questions.</string>
    <string name="term">Term</string>
    <string name="definition">Definition</string>
    <string name="example_optional">Example (optional)</string>
    <string name="recent_searches_will_appear_here">Recent searches will appear here</string>
    <string name="fab">FAB</string>
    <string name="edit_term">Add/Edit term</string>
</resources>