<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top"
        android:padding="24dp"
        >

    <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="10dp"
            />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
            android:text="@string/choose_difficulty_level"
            />

    <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="24dp"
            />

    <Button
            android:id="@+id/easyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/easy"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:layout_marginBottom="12dp"
            />

    <Button
            android:id="@+id/mediumButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medium"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:layout_marginBottom="12dp"
            />

    <Button
            android:id="@+id/hardButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:text="@string/hard"
            android:layout_marginBottom="24dp"

            />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructions"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:layout_marginBottom="8dp"
            android:textStyle="bold"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quizDescription"
            android:textSize="16sp"
            android:textAppearance="@style/TextAppearance.AppCompat"
             />

</LinearLayout>
