<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            >

        <ImageView
                android:id="@+id/welcomeImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/app_icon_modified"
                android:contentDescription="@string/mathtrix"
                android:layout_centerInParent="true"
                />

        <TextView
                android:id="@+id/welcomeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to_mathtrix"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:layout_below="@id/welcomeImage"
                android:layout_marginTop="16dp"
                android:layout_centerHorizontal="true"
                />

        <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/welcomeTitle"
                android:layout_alignParentEnd="true"
                android:layout_margin="16dp"
                android:gravity="center"
                android:text="@string/description"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                />

        <Button
                android:id="@+id/startButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_started"
                style="?attr/buttonBarButtonStyle"
                android:layout_below="@id/description"
                android:layout_marginTop="24dp"
                android:layout_centerHorizontal="true"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>