<!-- nav_header.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
              android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".NavigationHeader">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end">

        <ImageView
                android:id="@+id/iVDarkMode"
                android:layout_width="25dp"
                android:layout_height="30dp"
                android:src="@drawable/baseline_dark_mode_24"
                android:layout_gravity="end|top"
                android:clickable="true"
                android:onClick="toggleTheme"
                android:contentDescription="@string/app_name"
                tools:ignore="DuplicateSpeakableTextCheck,KeyboardInaccessibleWidget,TouchTargetSizeCheck,UsingOnClickInXml" />
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:orientation="horizontal">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

            <ImageView
                    android:id="@+id/nav_profile_image"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@mipmap/ic_launcher_round"
                    android:contentDescription="@string/app_name"
                    android:layout_gravity="start"
                    tools:ignore="ImageContrastCheck" />

        </LinearLayout>
    </LinearLayout>

    <TextView
            android:id="@+id/nav_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mathtrix"
            android:textColor="@android:color/white"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold"
            android:layout_gravity="start"
            android:layout_marginTop="8dp" />

    <!-- User Email or Additional Info -->
    <TextView android:id="@+id/nav_user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/an_innovative_business_mathematics_application"
            android:textColor="@android:color/white"
            android:textAppearance="?android:textAppearanceSmall"
            android:layout_gravity="start" />

</LinearLayout>
